== 0.3.0 2010-05-04
* Added JTM import and export (experimental)
* Implemented Topic.mergeIn()
* Added more API documentation
* Added more test cases
* Bugfix: Removing a type from a topic did not update the TypeInstanceIndex
* Bugfix: Fixed syntax error in code for node.js-compatibility
* Bugfix: Topic.remove() now checks if the topic is used as a player in a role
* several minor bugfixes

== 0.2.2 2010-03-20

* Implemented ScopedIndex
* Implemented TypeInstanceIndex
* Removed 'MemImpl' from all class names but TopicMapSystemMemImpl
  (as suggested by Robert Cerny)
* Implemented check for topic in use in Topic.remove()
* More unit tests (now 162 tests)

== 0.2.1 2010-03-03

* Bugfix in make rule for building the API docs

== 0.2.0 2010-03-03

* Initial public release
* Changed build-system from rake to make

== 0.1.0 2010-02-16

* First internal release