@@ -19,6 +19,7 @@
   <li><a href="TestAssociation.html" target="test">TestAssociation</a></li>
   <li><a href="TestConstruct.html" target="test">TestConstruct</a></li>
   <li><a href="TestItemIdentifierConstraint.html" target="test">TestItemIdentifierConstraint</a></li>
+  <li><a href="TestJTMReader.html" target="test">TestJTMReader</a></li>
   <li><a href="TestName.html" target="test">TestName</a></li>
   <li><a href="TestOccurrence.html" target="test">TestOccurrence</a></li>
   <li><a href="TestReifiable.html" target="test">TestReifiable</a></li>
